# smart-smoker-controller

./: README.md
broker_mqtt_a1/: CMakeLists.txt  docker-compose.yml  idf.sh  nats.conf  payloads.txt  sdkconfig
broker_mqtt_a1/components/app/: CMakeLists.txt  app_air_intake.c  app_dht22.c  app_mqtt.c  app_valve.c  app_wifi_led.c
broker_mqtt_a1/components/app/include/app/: app_air_intake.h  app_dht22.h  app_mqtt.h  app_valve.h  app_wifi_led.h
broker_mqtt_a1/components/domain/: CMakeLists.txt  servo_domain.c
broker_mqtt_a1/components/domain/include/domain/: servo_domain.h
broker_mqtt_a1/components/platform_esp32/: CMakeLists.txt  gpio_esp32.c  servo_esp32.c  valve_actuator_esp32.c  wifi_esp32.c
broker_mqtt_a1/components/platform_esp32/include/platform/: servo_esp32.h  valve_actuator_esp32.h  wifi_esp32.h
broker_mqtt_a1/components/ports/: CMakeLists.txt  valve_port_esp32.c  wifi_port_esp32.c
broker_mqtt_a1/components/ports/include/ports/: gpio_port.h  servo_port.h  valve_port.h  wifi_port.h
broker_mqtt_a1/external_components/: dht  esp_idf_lib_helpers  log
broker_mqtt_a1/main/: CMakeLists.txt  main.c
